--- a/trac-nghiem-react-admin/package.json
+++ b/trac-nghiem-react-admin/package.json
@@ -46,6 +46,7 @@
     "handsontable": "^9.0.2",
     "history": "^5.0.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
