--- a/trac-nghiem-react-admin/package.json
+++ b/trac-nghiem-react-admin/package.json
@@ -43,6 +43,7 @@
     "core-js": "^3.18.0",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
+    "express": "^4.17.1",
     "handsontable": "^9.0.2",
     "history": "^5.0.1",
     "jwt-decode": "^3.1.2",
