--- a/TracNghiem_Nodejs/package.json
+++ b/TracNghiem_Nodejs/package.json
@@ -40,6 +40,8 @@
     "msnodesqlv8": "^2.4.0",
     "mssql": "^7.2.1",
     "multer": "^1.4.3",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "tedious": "^12.2.0",
     "uuid": "^8.3.2",
     "xlsx": "^0.17.2"
