--- a/trac-nghiem-react-client/package.json
+++ b/trac-nghiem-react-client/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
